Fixed Button not showing focus styles when programmatically focused

--- a/packages/terra-button/src/_mixins.scss
+++ b/packages/terra-button/src/_mixins.scss
@@ -8,7 +8,8 @@
   color: map-get($color-map, color);
   font-weight: map-get($color-map, font-weight);
 
-  &.is-focused {
+  &.is-focused,
+  &:focus {
     background-color: map-get($color-map, focus-background-color);
     border-color: map-get($color-map, focus-border-color);
     box-shadow: map-get($color-map, focus-box-shadow);
